--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest test"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.3",
